# AlvarezSalvado_ElementaryTransformations

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.template  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  OUTSTANDING_TASKS.md  README.md  add_hpc_fix_to_models.sh  add_matlab_logging.sh  add_startup_confirmation.sh  analyze_plume_full.m  analyze_results.m  analyze_run_test.sh  analyze_test_data.py  analyze_test_data.sh  analyze_test_data_direct.py  apply_final_fix.sh  apply_slurm_fix.sh  check_batch_sim.sh  check_config_support.sh  check_crimaldi_error.m  check_crimaldi_hdf5.m  check_data_orientation.m  check_duration.sh  check_error.m  check_error_file.m  check_error_v2.m  check_errors.m  check_h5.py  check_h5_datasets.m  check_h5_structure.py  check_hdf5_structure.m  check_hpc_status.sh  check_job_status.sh  check_plume_data.m  check_plume_path.m  check_plumes_unified.m  (+213 more)
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
Code/: AGENTS.md  Elifenavmodel_bilateral.m  Elifenavmodel_bilateral_backup.m  __init__.py  analyze_crimaldi_data.py  calculateJobParams.m  calculateTotalJobs.m  calculate_metrics.py  characterize_plume_intensities.py  check_simulation_health.py  chooseTrialLength.m  comparative_analysis.py  compare_intensity_stats.py  compute_plume_intensity_stats.m  data_aggregation.py  data_discovery.py  data_loading.py  export_results.m  generate_clean_configs.m  generate_dashboard.py  get_plot_defaults.m  get_plume_file.m  get_plume_file.m.backup_20250603_192354  get_plume_file.m.original  get_plume_file_hpc.m  get_plume_file_paths.m  get_plume_file_wrapper.m  intensity_stats.py  isSlurmCluster.m  load_analysis_config.py  load_config.m  load_custom_plume.m  load_experiment_config.m  load_multi_trajectories.m  load_paths.m  load_plume_hdf5.m  load_plume_hdf5_info.m  load_plume_video.m  load_simulation_params.m  load_yaml.m  (+36 more)
WalkingArenaLoopLongerIRtime2/: AGENTS.md
archived_scripts/: debug_matlab_slurm.sh  generated_job.slurm  robust_slurm_job.slurm  submit_test.sh  test_nav_model.slurm  test_run.sh
benchmarks/: README.md  requirements.txt  run_all_benchmarks.py
configs/: alvarez_salvado_2018.yaml  analysis_config.yaml  batch_job_config.yaml  config.json  default_config.yaml  environment.yaml  my_complex_plume_config.yaml  my_complex_plume_loop2min.yaml  paths.json  paths.json.backup_20250604_092308  paths.json.backup_20250604_130410  paths.json.backup_20250604_130611  paths.json.fixed  paths.yaml.template  plot_defaults.json  plume_intensity_stats.yaml  plume_stats.yaml  project_paths.yaml  project_paths.yaml.template
docs/: README.md  analysis_plan.md  intensity_comparison.md  plume_pipeline.md  run_batch_job_4000.md  simulation_analysis.md  video_script_example.m
jobs/: nav_job_template.slurm
notebooks/: orient_plumes.ipynb
scripts/: add_matlab_logging.sh  add_startup_confirmation.sh  cleanup_junk_files.sh  cleanup_results.sh  create_new_wrapper.sh  create_results_report.sh  debug_and_fix.sh  deploy_hpc_tools.sh  fix_analysis_logic.sh  fix_heredoc.sh  fix_matlab_cmd.sh  fix_quick_mode.sh  fix_timeout_issue.sh  fix_wrapper_section.sh  fix_wrapper_syntax.sh  generate_makefile_paths.sh  get_hdf5_dimensions.sh  hpc_batch_submit.sh  hpc_monitor_results.sh  ingest_plume.py  load_paths_config.m  make_paths_relative.py  manage_sessions.sh  matlab_results_check.sh  plume_config.py  process_custom_plume.py  quick_validate.sh  run_direct.sh  run_intensity_batch.py  run_matlab_safe.sh  run_my_pipeline.sh  run_nav_model.sh  run_plot_results.sh  run_plume_pipeline.py  run_plume_sim.sh  run_test.sh  setup_complete_workflow.sh  setup_env.sh  setup_env_paths.sh  setup_hpc_scripts.sh  (+15 more)
slurm/: nav_job_slurm.sh
src/backend/: .gitignore  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/backend/algorithms/: __init__.py  algorithm_registry.py  base_algorithm.py  casting.py  gradient_following.py  hybrid_strategies.py  plume_tracking.py  reference_implementation.py
src/backend/cache/: __init__.py  cache_manager.py  disk_cache.py  eviction_strategy.py  memory_cache.py  result_cache.py
src/backend/config/: __init__.py  default_analysis.json  default_normalization.json  default_simulation.json  logging_config.json  performance_thresholds.json
src/backend/config/schema/: normalization_schema.json  simulation_schema.json
src/backend/core/analysis/: __init__.py  report_generator.py  trajectory_analysis.py
src/backend/core/data_normalization/: __init__.py  format_converter.py  pixel_resolution_normalizer.py  scale_calibration.py  temporal_normalization.py  validation.py
src/backend/core/simulation/: __init__.py  algorithm_interface.py  parameter_manager.py  simulation_engine.py
src/backend/error/: __init__.py  error_reporter.py  exceptions.py  processing_error.py  recovery_strategy.py  validation_error.py
src/backend/examples/: README.md  __init__.py  analysis_visualization.py  simple_batch_simulation.py
src/backend/io/: __init__.py  avi_handler.py  config_reader.py  crimaldi_format_handler.py  custom_format_handler.py  format_registry.py  video_reader.py
src/backend/monitoring/: __init__.py  alert_system.py  log_manager.py
src/backend/scripts/: __init__.py  clean_cache.sh  generate_report.py  install_dependencies.sh  run_batch_simulation.sh
src/backend/utils/: __init__.py  config_parser.py  error_handling.py  file_utils.py  logging_utils.py  parallel_processing.py  progress_display.py  scientific_constants.py
temp_matlab_283236/: analyze_plume_full.m
temp_matlab_339442/: analyze_plume.m  run_analysis.sh
tests/: conftest.py  parameter_override.yaml  sample_config.json  sample_config.yaml  sample_config_bilateral.json  sample_config_bilateral.yaml  test_agent_env_override.py  test_agents_per_job_validation.m  test_analyze_crimaldi_data.py  test_analyzer_filtering.m  test_auto_streaming_bilateral_disabled.m  test_auto_streaming_on_slurm.m  test_batch_job_custom_lists.m  test_bilateral_streaming_error.m  test_bilateral_video_adaptation_reset.m  (+160 more)
(+89 files in other folders)
