[project]
name = "elementary-transformations"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "h5py",
  "ipykernel",
  "pyyaml",
  "matplotlib",
  "loguru",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Code"]
exclude = ["tests", "docs", "data", "external", "configs"]
